      previous equivalent of SPEED -1. Movements are done with subpixel accuracy
    + Fixed incorrect starting position of image.
    + Rounding error fixes to allow for more exact scrolling.
    + Added support for motion blur via a new BLUR parameter
    + Added PREMULTIPLY parameter to support images stored with straight alpha.

CasparCG 2.0 Stable (w.r.t Beta 3)
==================================

General
-------

  o Misc stability and performance fixes.

Consumers
---------

  o File Consumer
    + Changed semantics to more closely follow ffmpeg (see forums).
    + Added options, -r, -acodec, -s, -pix_fmt, -f and more.
  o Screen Consumer
    + Added vsync support.

CasparCG 2.0 Beta 3 (w.r.t Beta 1)
==================================

Formats
-------

  o ProRes Support
    + Both encoding and decoding.
  o NTSC Support
    + Updated audio-pipeline for native NTSC support. Previous implementation
      did not fully support NTSC audio and could cause incorrect behaviour or
      even crashes.

Consumers
---------

  o File Consumer added
    + See updated wiki or ask in forum for more information.
    + Should support anything ffmpeg supports. However, we will work mainly with
      DNXHD, PRORES and H264.
    - Key-only is not supported.
  o Bluefish Consumer
    + 24 bit audio support.
    - Embedded-audio does not work with Epoch cards.
  o Decklink Consumer
    + Low latency enabled by default.
    + Added graphs for driver buffers.
  o Screen Consumer
    + Changed screen consumer square PAL to the more common wide-square PAL.
    + Can now be closed.
    + Fixed interpolation artifacts when running non-square video-modes.
    + Automatically deinterlace interlaced input.

Producers
---------

  o Decklink Producer
    + Improved color quality be avoiding uneccessary conversion to BGRA.
  o FFMPEG Producer
    + Fixed missing alpha for (RGB)A formats when deinterlacing.
    + Updated buffering to work better with files with long audio/video